<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/f"
        android:scaleType="centerCrop"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="#d0000000"
        android:gravity="center"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:src="@drawable/logohoriszontal"
            android:layout_marginBottom="50dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#F6CD8F"
            android:gravity="start"
            android:textSize="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/textoEmailLogin"/>

        <EditText
            android:id="@+id/editTextEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/input"
            android:hint="@string/textoEmailLogin"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColor="#fff"
            android:textColorHint="#ccc" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#F6CD8F"
            android:gravity="start"
            android:textSize="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/textoContrasenyaLogin"/>

        <EditText
            android:id="@+id/editTextContrasenyaLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/input"
            android:hint="@string/textoContrasenyaLogin"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColor="#fff"
            android:textColorHint="#ccc" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:gravity="end"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="30dp"
            android:text="@string/textoContrasenyaOEmailOlvidada"/>
        <Button
            android:id="@+id/buttonIniciarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_fondo_color"
            android:text="@string/botonIniciarSesión"
            android:textColor="#d0000000"
            android:textSize="16sp"
            android:elevation="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textoIniciarSesionInvitado"
                android:textSize="16sp"
                android:textColor="#fff"
                />


        </LinearLayout>

        <TextView
            android:id="@+id/textViewIniciarSesionInvitado"
            android:layout_width="200dp"
            android:layout_height="25dp"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:text="@string/entrarInvitado"
            android:textColor="#4074CC"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>